# bruin-ecommerce-pipeline

./: .bruin.yml  .gitignore  200.html  404.html  CNAME  Makefile  README.md  __preview.json  _payload.json  docker-compose.yml  generate_data.py  getting-started.html  glossary.yml  index.html  policy.yml  pyproject.toml
__nuxt_content/docs/: sql_dump.txt
_nuxt/: 81TucBUT.js  BNUc5B8L.js  DBdmQ0a0.js  DjkAwU9S.js  _dJspnQ1.js  entry.CTtziPDI.css  p1xcoZdF.js
_nuxt/builds/: latest.json
_nuxt/builds/meta/: 690c9d2d-cc08-49c6-9c35-5f1df44be27e.json  6ece66e4-41d4-467a-9387-e41020d0feed.json  cf8f86a7-6e3b-48e9-ab2c-6e88cd3c09bf.json
docs/: article.md  tree.md  understanding-data-modeling.md  what-were-gonna-build.md
docs/content/2.tutorials/: 1.ecommerce-pipeline.md
ecommerce/: pipeline.yml
ecommerce/assets/ingestion/: raw.customers.asset.yml  raw.order_items.asset.yml  raw.orders.asset.yml  raw.product_variants.asset.yml
ecommerce/assets/mart/: mart.product_performance.sql  mart.sales_daily.sql  mart.variant_profitability.sql
ecommerce/assets/staging/: stg.orders.sql  stg.product_variants.sql  stg.products.sql
getting-started/: _payload.json
orders-performance/: pipeline.yml
orders-performance/assets/ingestion/: raw.order_items.asset.yml  raw.orders.asset.yml  raw.products.asset.yml
orders-performance/assets/staging/: stg.customers.asset.sql  stg.order_items.sql  stg.orders.sql  stg.product_variants.sql  stg.test.asset.sql
sql/: ddl.sql
tutorials/: ecommerce-pipeline.html
tutorials/ecommerce-pipeline/: _payload.json
(+6 files in other folders)
